force-app/main/default/objects/ZGRT14Report__c/ZGRT14Report__c.object-meta.xml
<CustomObject>
    <label>ZGRT14Report</label>
    <nameField>
        <displayFormat>ZGRT-{00000000}</displayFormat>
        <label>ZGRT14Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZGRT14Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>