force-app/main/default/objects/ZGRT14Report__c/fields/aedat_Formula__c.field-meta.xml
<CustomField>
    <fullName>aedat_Formula__c</fullName>
    <formula>DATEVALUE(
IF( ISBLANK(aedat__c) , &apos;&apos;, LEFT( TEXT(aedat__c) , 10)  )
)</formula>
    <label>aedat_Formula</label>
    <type>Date</type>
</CustomField>