force-app/main/default/objects/ZGRT14Report__c/fields/belnr__c.field-meta.xml
<CustomField>
    <fullName>belnr__c</fullName>
    <label>DocumentNo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>