force-app/main/default/objects/ZGRT14Report__c/fields/bezei2__c.field-meta.xml
<CustomField>
    <fullName>bezei2__c</fullName>
    <label>bezei2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>