force-app/main/default/objects/ZGRT14Report__c/fields/bstdk__c.field-meta.xml
<CustomField>
    <fullName>bstdk__c</fullName>
    <label>bstdk</label>
    <type>DateTime</type>
</CustomField>