force-app/main/default/objects/ZGRT14Report__c/fields/bstkd__c.field-meta.xml
<CustomField>
    <fullName>bstkd__c</fullName>
    <label>bstkd</label>
    <length>70</length>
    <type>Text</type>
</CustomField>