force-app/main/default/objects/ZGRT14Report__c/fields/bstkd_e__c.field-meta.xml
<CustomField>
    <fullName>bstkd_e__c</fullName>
    <label>bstkd_e</label>
    <length>70</length>
    <type>Text</type>
</CustomField>