force-app/main/default/objects/ZGRT14Report__c/fields/c_group3__c.field-meta.xml
<CustomField>
    <fullName>c_group3__c</fullName>
    <label>c_group3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>