force-app/main/default/objects/ZGRT14Report__c/fields/charg__c.field-meta.xml
<CustomField>
    <fullName>charg__c</fullName>
    <label>charg</label>
    <length>20</length>
    <type>Text</type>
</CustomField>