force-app/main/default/objects/ZGRT14Report__c/fields/dbrtg__c.field-meta.xml
<CustomField>
    <fullName>dbrtg__c</fullName>
    <label>dbrtg</label>
    <length>10</length>
    <type>Text</type>
</CustomField>