force-app/main/default/objects/ZGRT14Report__c/fields/ddtext__c.field-meta.xml
<CustomField>
    <fullName>ddtext__c</fullName>
    <label>ddtext</label>
    <length>120</length>
    <type>Text</type>
</CustomField>