force-app/main/default/objects/ZGRT14Report__c/fields/ean11__c.field-meta.xml
<CustomField>
    <fullName>ean11__c</fullName>
    <label>EAN/UPC</label>
    <length>36</length>
    <type>Text</type>
</CustomField>