force-app/main/default/objects/ZGRT14Report__c/fields/erdat_dn_Formula__c.field-meta.xml
<CustomField>
    <fullName>erdat_dn_Formula__c</fullName>
    <formula>DATEVALUE(
IF( ISBLANK(erdat_dn__c) , &apos;&apos;, LEFT( TEXT(erdat_dn__c) , 10)  )
)</formula>
    <label>erdat_dn_Formula</label>
    <type>Date</type>
</CustomField>