force-app/main/default/objects/ZGRT14Report__c/fields/erdat_Formula__c.field-meta.xml
<CustomField>
    <fullName>erdat_Formula__c</fullName>
    <formula>DATEVALUE(
IF( ISBLANK(erdat__c) , &apos;&apos;, LEFT( TEXT(erdat__c) , 10)  )
)</formula>
    <label>Invoice Create Date</label>
    <type>Date</type>
</CustomField>