force-app/main/default/objects/ZGRT14Report__c/fields/fkart__c.field-meta.xml
<CustomField>
    <fullName>fkart__c</fullName>
    <label>Bill. Type</label>
    <length>8</length>
    <type>Text</type>
</CustomField>