force-app/main/default/objects/ZGRT14Report__c/fields/fkdat__c.field-meta.xml
<CustomField>
    <fullName>fkdat__c</fullName>
    <label>fkdat</label>
    <type>DateTime</type>
</CustomField>