force-app/main/default/objects/ZGRT14Report__c/fields/fkimg__c.field-meta.xml
<CustomField>
    <fullName>fkimg__c</fullName>
    <label>Bill.qty</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>