force-app/main/default/objects/ZGRT14Report__c/fields/fksto__c.field-meta.xml
<CustomField>
    <fullName>fksto__c</fullName>
    <label>fksto</label>
    <length>2</length>
    <type>Text</type>
</CustomField>