force-app/main/default/objects/ZGRT14Report__c/fields/gjahr__c.field-meta.xml
<CustomField>
    <fullName>gjahr__c</fullName>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>