force-app/main/default/objects/ZGRT14Report__c/fields/inco2__c.field-meta.xml
<CustomField>
    <fullName>inco2__c</fullName>
    <label>inco2</label>
    <length>56</length>
    <type>Text</type>
</CustomField>