force-app/main/default/objects/ZGRT14Report__c/fields/invno__c.field-meta.xml
<CustomField>
    <fullName>invno__c</fullName>
    <label>invno</label>
    <length>26</length>
    <type>Text</type>
</CustomField>