force-app/main/default/objects/ZGRT14Report__c/fields/kbetr__c.field-meta.xml
<CustomField>
    <fullName>kbetr__c</fullName>
    <label>kbetr</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>