force-app/main/default/objects/ZGRT14Report__c/fields/kbetr_bwb__c.field-meta.xml
<CustomField>
    <fullName>kbetr_bwb__c</fullName>
    <label>kbetr_bwb</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>