force-app/main/default/objects/ZGRT14Report__c/fields/kdmat__c.field-meta.xml
<CustomField>
    <fullName>kdmat__c</fullName>
    <label>kdmat</label>
    <length>70</length>
    <type>Text</type>
</CustomField>