force-app/main/default/objects/ZGRT14Report__c/fields/klimk__c.field-meta.xml
<CustomField>
    <fullName>klimk__c</fullName>
    <label>klimk</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>