force-app/main/default/objects/ZGRT14Report__c/fields/kpein__c.field-meta.xml
<CustomField>
    <fullName>kpein__c</fullName>
    <label>kpein</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>