force-app/main/default/objects/ZGRT14Report__c/fields/kraus__c.field-meta.xml
<CustomField>
    <fullName>kraus__c</fullName>
    <label>kraus</label>
    <length>22</length>
    <type>Text</type>
</CustomField>