force-app/main/default/objects/ZGRT14Report__c/fields/kunag__c.field-meta.xml
<CustomField>
    <fullName>kunag__c</fullName>
    <label>Customer SAP ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>