force-app/main/default/objects/ZGRT14Report__c/fields/kunag_r__c.field-meta.xml
<CustomField>
    <fullName>kunag_r__c</fullName>
    <label>kunag_r</label>
    <length>2</length>
    <type>Text</type>
</CustomField>