force-app/main/default/objects/ZGRT14Report__c/fields/kunag_s__c.field-meta.xml
<CustomField>
    <fullName>kunag_s__c</fullName>
    <label>kunag_s</label>
    <length>40</length>
    <type>Text</type>
</CustomField>