force-app/main/default/objects/ZGRT14Report__c/fields/kunnr__c.field-meta.xml
<CustomField>
    <fullName>kunnr__c</fullName>
    <label>kunnr</label>
    <length>20</length>
    <type>Text</type>
</CustomField>