force-app/main/default/objects/ZGRT14Report__c/fields/kunnr_dlxsj__c.field-meta.xml
<CustomField>
    <fullName>kunnr_dlxsj__c</fullName>
    <label>kunnr_dlxsj</label>
    <length>20</length>
    <type>Text</type>
</CustomField>