force-app/main/default/objects/ZGRT14Report__c/fields/kunnr_sdf__c.field-meta.xml
<CustomField>
    <fullName>kunnr_sdf__c</fullName>
    <label>kunnr_sdf</label>
    <length>20</length>
    <type>Text</type>
</CustomField>