force-app/main/default/objects/ZGRT14Report__c/fields/kurrf__c.field-meta.xml
<CustomField>
    <fullName>kurrf__c</fullName>
    <label>kurrf</label>
    <precision>14</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>