force-app/main/default/objects/ZGRT14Report__c/fields/kwert_itsg_47__c.field-meta.xml
<CustomField>
    <fullName>kwert_itsg_47__c</fullName>
    <label>kwert_itsg_47</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>