force-app/main/default/objects/ZGRT14Report__c/fields/kwert_itsg__c.field-meta.xml
<CustomField>
    <fullName>kwert_itsg__c</fullName>
    <label>kwert_itsg</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>