force-app/main/default/objects/ZGRT14Report__c/fields/kwert_itzd__c.field-meta.xml
<CustomField>
    <fullName>kwert_itzd__c</fullName>
    <label>kwert_itzd</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>