force-app/main/default/objects/ZGRT14Report__c/fields/kwert_wl__c.field-meta.xml
<CustomField>
    <fullName>kwert_wl__c</fullName>
    <label>kwert_wl</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>