force-app/main/default/objects/ZGRT14Report__c/fields/kwert_zs19_zd__c.field-meta.xml
<CustomField>
    <fullName>kwert_zs19_zd__c</fullName>
    <label>kwert_zs19_zd</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>