force-app/main/default/objects/ZGRT14Report__c/fields/kwert_zs20__c.field-meta.xml
<CustomField>
    <fullName>kwert_zs20__c</fullName>
    <label>kwert_zs20</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>