force-app/main/default/objects/ZGRT14Report__c/fields/kzwi1__c.field-meta.xml
<CustomField>
    <fullName>kzwi1__c</fullName>
    <label>kzwi1</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>