force-app/main/default/objects/ZGRT14Report__c/fields/land1__c.field-meta.xml
<CustomField>
    <fullName>land1__c</fullName>
    <label>land1</label>
    <length>6</length>
    <type>Text</type>
</CustomField>