force-app/main/default/objects/ZGRT14Report__c/fields/lgortxt__c.field-meta.xml
<CustomField>
    <fullName>lgortxt__c</fullName>
    <label>Stor. Loc.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>