force-app/main/default/objects/ZGRT14Report__c/fields/load_dt__c.field-meta.xml
<CustomField>
    <fullName>load_dt__c</fullName>
    <label>load_dt</label>
    <type>DateTime</type>
</CustomField>