force-app/main/default/objects/ZGRT14Report__c/fields/load_dt_Formula__c.field-meta.xml
<CustomField>
    <fullName>load_dt_Formula__c</fullName>
    <formula>DATEVALUE(
IF( ISBLANK(load_dt__c) , &apos;&apos;, LEFT( TEXT(load_dt__c) , 10)  )
)</formula>
    <label>load_dt_Formula</label>
    <type>Date</type>
</CustomField>