force-app/main/default/objects/ZGRT14Report__c/fields/maktx__c.field-meta.xml
<CustomField>
    <fullName>maktx__c</fullName>
    <label>maktx</label>
    <length>80</length>
    <type>Text</type>
</CustomField>