force-app/main/default/objects/ZGRT14Report__c/fields/matkl__c.field-meta.xml
<CustomField>
    <fullName>matkl__c</fullName>
    <label>matkl</label>
    <length>18</length>
    <type>Text</type>
</CustomField>