force-app/main/default/objects/ZGRT14Report__c/fields/name1__c.field-meta.xml
<CustomField>
    <fullName>name1__c</fullName>
    <label>Customer Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>