force-app/main/default/objects/ZGRT14Report__c/fields/name_dl__c.field-meta.xml
<CustomField>
    <fullName>name_dl__c</fullName>
    <label>name_dl</label>
    <length>60</length>
    <type>Text</type>
</CustomField>