force-app/main/default/objects/ZGRT14Report__c/fields/name_kunrg__c.field-meta.xml
<CustomField>
    <fullName>name_kunrg__c</fullName>
    <label>name_kunrg</label>
    <length>80</length>
    <type>Text</type>
</CustomField>