force-app/main/default/objects/ZGRT14Report__c/fields/name_re__c.field-meta.xml
<CustomField>
    <fullName>name_re__c</fullName>
    <label>name_re</label>
    <length>60</length>
    <type>Text</type>
</CustomField>