force-app/main/default/objects/ZGRT14Report__c/fields/ntgew__c.field-meta.xml
<CustomField>
    <fullName>ntgew__c</fullName>
    <label>ntgew</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>