force-app/main/default/objects/ZGRT14Report__c/fields/ort01__c.field-meta.xml
<CustomField>
    <fullName>ort01__c</fullName>
    <label>ort01</label>
    <length>50</length>
    <type>Text</type>
</CustomField>