force-app/main/default/objects/ZGRT14Report__c/fields/pdate__c.field-meta.xml
<CustomField>
    <fullName>pdate__c</fullName>
    <label>pdate</label>
    <type>DateTime</type>
</CustomField>