force-app/main/default/objects/ZGRT14Report__c/fields/pdate_Formula_Month__c.field-meta.xml
<CustomField>
    <fullName>pdate_Formula_Month__c</fullName>
    <formula>MONTH(pdate_Formula__c)</formula>
    <label>Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>