force-app/main/default/objects/ZGRT14Report__c/fields/pltyp_desc__c.field-meta.xml
<CustomField>
    <fullName>pltyp_desc__c</fullName>
    <label>pltyp_desc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>