force-app/main/default/objects/ZGRT14Report__c/fields/posnr__c.field-meta.xml
<CustomField>
    <fullName>posnr__c</fullName>
    <label>Item</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>