force-app/main/default/objects/ZGRT14Report__c/fields/pstlz__c.field-meta.xml
<CustomField>
    <fullName>pstlz__c</fullName>
    <label>pstlz</label>
    <length>20</length>
    <type>Text</type>
</CustomField>