force-app/main/default/objects/ZGRT14Report__c/fields/regio__c.field-meta.xml
<CustomField>
    <fullName>regio__c</fullName>
    <label>regio</label>
    <length>6</length>
    <type>Text</type>
</CustomField>