force-app/main/default/objects/ZGRT14Report__c/fields/s_manager__c.field-meta.xml
<CustomField>
    <fullName>s_manager__c</fullName>
    <label>s_manager</label>
    <length>200</length>
    <type>Text</type>
</CustomField>