force-app/main/default/objects/ZGRT14Report__c/fields/sales_type__c.field-meta.xml
<CustomField>
    <fullName>sales_type__c</fullName>
    <label>sales_type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>