force-app/main/default/objects/ZGRT14Report__c/fields/sfakn__c.field-meta.xml
<CustomField>
    <fullName>sfakn__c</fullName>
    <label>sfakn</label>
    <length>20</length>
    <type>Text</type>
</CustomField>