force-app/main/default/objects/ZGRT14Report__c/fields/sort1__c.field-meta.xml
<CustomField>
    <fullName>sort1__c</fullName>
    <label>sort1</label>
    <length>2</length>
    <type>Text</type>
</CustomField>