force-app/main/default/objects/ZGRT14Report__c/fields/sort2__c.field-meta.xml
<CustomField>
    <fullName>sort2__c</fullName>
    <label>sort2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>