force-app/main/default/objects/ZGRT14Report__c/fields/str_sdf__c.field-meta.xml
<CustomField>
    <fullName>str_sdf__c</fullName>
    <label>str_sdf</label>
    <length>200</length>
    <type>Text</type>
</CustomField>