force-app/main/default/objects/ZGRT14Report__c/fields/swift__c.field-meta.xml
<CustomField>
    <fullName>swift__c</fullName>
    <label>swift</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>