force-app/main/default/objects/ZGRT14Report__c/fields/t_cost__c.field-meta.xml
<CustomField>
    <fullName>t_cost__c</fullName>
    <label>t_cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>