force-app/main/default/objects/ZGRT14Report__c/fields/u_cost__c.field-meta.xml
<CustomField>
    <fullName>u_cost__c</fullName>
    <label>u_cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>