force-app/main/default/objects/ZGRT14Report__c/fields/vbeln__c.field-meta.xml
<CustomField>
    <fullName>vbeln__c</fullName>
    <label>SD Doc.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>