force-app/main/default/objects/ZGRT14Report__c/fields/vdatu__c.field-meta.xml
<CustomField>
    <fullName>vdatu__c</fullName>
    <label>vdatu</label>
    <type>DateTime</type>
</CustomField>