force-app/main/default/objects/ZGRT14Report__c/fields/vgbel__c.field-meta.xml
<CustomField>
    <fullName>vgbel__c</fullName>
    <label>DN No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>