force-app/main/default/objects/ZGRT14Report__c/fields/vkorg__c.field-meta.xml
<CustomField>
    <fullName>vkorg__c</fullName>
    <label>vkorg</label>
    <length>8</length>
    <type>Text</type>
</CustomField>