force-app/main/default/objects/ZGRT14Report__c/fields/volum__c.field-meta.xml
<CustomField>
    <fullName>volum__c</fullName>
    <label>volum</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>