force-app/main/default/objects/ZGRT14Report__c/fields/vtext__c.field-meta.xml
<CustomField>
    <fullName>vtext__c</fullName>
    <label>vtext</label>
    <length>40</length>
    <type>Text</type>
</CustomField>