force-app/main/default/objects/ZGRT14Report__c/fields/wadat_ist__c.field-meta.xml
<CustomField>
    <fullName>wadat_ist__c</fullName>
    <label>wadat_ist</label>
    <type>DateTime</type>
</CustomField>