force-app/main/default/objects/ZGRT14Report__c/fields/wadat_ist_Formula__c.field-meta.xml
<CustomField>
    <fullName>wadat_ist_Formula__c</fullName>
    <formula>DATEVALUE(
IF( ISBLANK(wadat_ist__c) , &apos;&apos;, LEFT( TEXT(wadat_ist__c) , 10)  )
)</formula>
    <label>Ac.GI date</label>
    <type>Date</type>
</CustomField>