force-app/main/default/objects/ZGRT14Report__c/fields/wavwr__c.field-meta.xml
<CustomField>
    <fullName>wavwr__c</fullName>
    <label>wavwr</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>