force-app/main/default/objects/ZGRT14Report__c/fields/werks__c.field-meta.xml
<CustomField>
    <fullName>werks__c</fullName>
    <label>werks</label>
    <length>8</length>
    <type>Text</type>
</CustomField>