force-app/main/default/objects/ZGRT14Report__c/fields/xblnr__c.field-meta.xml
<CustomField>
    <fullName>xblnr__c</fullName>
    <label>Reference</label>
    <length>32</length>
    <type>Text</type>
</CustomField>