force-app/main/default/objects/ZGRT14Report__c/fields/ywms__c.field-meta.xml
<CustomField>
    <fullName>ywms__c</fullName>
    <label>ywms</label>
    <length>86</length>
    <type>Text</type>
</CustomField>