force-app/main/default/objects/ZGRT14Report__c/fields/z014__c.field-meta.xml
<CustomField>
    <fullName>z014__c</fullName>
    <label>z014</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>