force-app/main/default/objects/ZGRT14Report__c/fields/zbranddesc__c.field-meta.xml
<CustomField>
    <fullName>zbranddesc__c</fullName>
    <label>zbranddesc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>