force-app/main/default/objects/ZGRT14Report__c/fields/zcrm04p__c.field-meta.xml
<CustomField>
    <fullName>zcrm04p__c</fullName>
    <label>zcrm04p</label>
    <length>20</length>
    <type>Text</type>
</CustomField>