force-app/main/default/objects/ZGRT14Report__c/fields/zcusmodel__c.field-meta.xml
<CustomField>
    <fullName>zcusmodel__c</fullName>
    <label>Model</label>
    <length>120</length>
    <type>Text</type>
</CustomField>