force-app/main/default/objects/ZGRT14Report__c/fields/zd03__c.field-meta.xml
<CustomField>
    <fullName>zd03__c</fullName>
    <label>zd03</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>