force-app/main/default/objects/ZGRT14Report__c/fields/zdqr__c.field-meta.xml
<CustomField>
    <fullName>zdqr__c</fullName>
    <label>zdqr</label>
    <type>DateTime</type>
</CustomField>