force-app/main/default/objects/ZGRT14Report__c/fields/zdqr_Formula__c.field-meta.xml
<CustomField>
    <fullName>zdqr_Formula__c</fullName>
    <formula>DATEVALUE(
IF( ISBLANK(zdqr__c) , &apos;&apos;, LEFT( TEXT(zdqr__c) , 10)  )
)</formula>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>