force-app/main/default/objects/ZGRT14Report__c/fields/zfacmodel__c.field-meta.xml
<CustomField>
    <fullName>zfacmodel__c</fullName>
    <label>zfacmodel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>