force-app/main/default/objects/ZGRT14Report__c/fields/zflsg__c.field-meta.xml
<CustomField>
    <fullName>zflsg__c</fullName>
    <label>zflsg</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>