force-app/main/default/objects/ZGRT14Report__c/fields/zflzd__c.field-meta.xml
<CustomField>
    <fullName>zflzd__c</fullName>
    <label>zflzd</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>