force-app/main/default/objects/ZGRT14Report__c/fields/zhszj__c.field-meta.xml
<CustomField>
    <fullName>zhszj__c</fullName>
    <label>zhszj</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>