force-app/main/default/objects/ZGRT14Report__c/fields/zjdfl__c.field-meta.xml
<CustomField>
    <fullName>zjdfl__c</fullName>
    <label>zjdfl</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>