force-app/main/default/objects/ZGRT14Report__c/fields/zjdflsg__c.field-meta.xml
<CustomField>
    <fullName>zjdflsg__c</fullName>
    <label>zjdflsg</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>