force-app/main/default/objects/ZGRT14Report__c/fields/zjdflzd__c.field-meta.xml
<CustomField>
    <fullName>zjdflzd__c</fullName>
    <label>zjdflzd</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>