force-app/main/default/objects/ZGRT14Report__c/fields/zjshj__c.field-meta.xml
<CustomField>
    <fullName>zjshj__c</fullName>
    <label>zjshj</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>