force-app/main/default/objects/ZGRT14Report__c/fields/zjtfl__c.field-meta.xml
<CustomField>
    <fullName>zjtfl__c</fullName>
    <label>zjtfl</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>