force-app/main/default/objects/ZGRT14Report__c/fields/zjtflsg__c.field-meta.xml
<CustomField>
    <fullName>zjtflsg__c</fullName>
    <label>zjtflsg</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>