force-app/main/default/objects/ZGRT14Report__c/fields/zjtflzd__c.field-meta.xml
<CustomField>
    <fullName>zjtflzd__c</fullName>
    <label>zjtflzd</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>