force-app/main/default/objects/ZGRT14Report__c/fields/zmle__c.field-meta.xml
<CustomField>
    <fullName>zmle__c</fullName>
    <label>zmle</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>