force-app/main/default/objects/ZGRT14Report__c/fields/zmll__c.field-meta.xml
<CustomField>
    <fullName>zmll__c</fullName>
    <label>zmll</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>