force-app/main/default/objects/ZGRT14Report__c/fields/zmodel__c.field-meta.xml
<CustomField>
    <fullName>zmodel__c</fullName>
    <label>zmodel</label>
    <length>120</length>
    <type>Text</type>
</CustomField>