force-app/main/default/objects/ZGRT14Report__c/fields/zndfl__c.field-meta.xml
<CustomField>
    <fullName>zndfl__c</fullName>
    <label>zndfl</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>