force-app/main/default/objects/ZGRT14Report__c/fields/zndflsg__c.field-meta.xml
<CustomField>
    <fullName>zndflsg__c</fullName>
    <label>zndflsg</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>