force-app/main/default/objects/ZGRT14Report__c/fields/zow1__c.field-meta.xml
<CustomField>
    <fullName>zow1__c</fullName>
    <label>zow1</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>