force-app/main/default/objects/ZGRT14Report__c/fields/zs09_zd__c.field-meta.xml
<CustomField>
    <fullName>zs09_zd__c</fullName>
    <label>zs09_zd</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>