force-app/main/default/objects/ZGRT14Report__c/fields/zs12__c.field-meta.xml
<CustomField>
    <fullName>zs12__c</fullName>
    <label>zs12</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>