force-app/main/default/objects/ZGRT14Report__c/fields/zs15__c.field-meta.xml
<CustomField>
    <fullName>zs15__c</fullName>
    <label>zs15</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>