force-app/main/default/objects/ZGRT14Report__c/fields/zs38_kwert__c.field-meta.xml
<CustomField>
    <fullName>zs38_kwert__c</fullName>
    <label>zs38_kwert</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>