force-app/main/default/objects/ZGRT14Report__c/fields/zs40_hb__c.field-meta.xml
<CustomField>
    <fullName>zs40_hb__c</fullName>
    <label>zs40_hb</label>
    <length>10</length>
    <type>Text</type>
</CustomField>