force-app/main/default/objects/ZGRT14Report__c/fields/zs60_t__c.field-meta.xml
<CustomField>
    <fullName>zs60_t__c</fullName>
    <label>zs60_t</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>