force-app/main/default/objects/ZGRT14Report__c/fields/zsc2__c.field-meta.xml
<CustomField>
    <fullName>zsc2__c</fullName>
    <label>zsc2</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>