force-app/main/default/objects/ZGRT14Report__c/fields/zsc5__c.field-meta.xml
<CustomField>
    <fullName>zsc5__c</fullName>
    <label>zsc5</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>