force-app/main/default/objects/ZGRT14Report__c/fields/zsource__c.field-meta.xml
<CustomField>
    <fullName>zsource__c</fullName>
    <label>zsource</label>
    <length>2</length>
    <type>Text</type>
</CustomField>