force-app/main/default/objects/ZGRT14Report__c/fields/zsourcedesc__c.field-meta.xml
<CustomField>
    <fullName>zsourcedesc__c</fullName>
    <label>zsourcedesc</label>
    <length>200</length>
    <type>Text</type>
</CustomField>