force-app/main/default/objects/ZGRT14Report__c/fields/zspec__c.field-meta.xml
<CustomField>
    <fullName>zspec__c</fullName>
    <label>zspec</label>
    <length>6</length>
    <type>Text</type>
</CustomField>