force-app/main/default/objects/ZGRT14Report__c/fields/zterm__c.field-meta.xml
<CustomField>
    <fullName>zterm__c</fullName>
    <label>zterm</label>
    <length>8</length>
    <type>Text</type>
</CustomField>