force-app/main/default/objects/ZGRT14Report__c/fields/ztjsxf__c.field-meta.xml
<CustomField>
    <fullName>ztjsxf__c</fullName>
    <label>ztjsxf</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>