force-app/main/default/objects/ZGRT14Report__c/fields/ztjyf__c.field-meta.xml
<CustomField>
    <fullName>ztjyf__c</fullName>
    <label>ztjyf</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>