force-app/main/default/objects/ZGRT14Report__c/fields/ztype__c.field-meta.xml
<CustomField>
    <fullName>ztype__c</fullName>
    <label>brand type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>