force-app/main/default/objects/ZGRT14Report__c/fields/zuonr__c.field-meta.xml
<CustomField>
    <fullName>zuonr__c</fullName>
    <label>zuonr</label>
    <length>36</length>
    <type>Text</type>
</CustomField>