force-app/main/default/objects/ZGRT14Report__c/fields/zvkburt__c.field-meta.xml
<CustomField>
    <fullName>zvkburt__c</fullName>
    <label>zvkburt</label>
    <length>50</length>
    <type>Text</type>
</CustomField>