force-app/main/default/objects/ZGRT14Report__c/fields/zvkgrpt__c.field-meta.xml
<CustomField>
    <fullName>zvkgrpt__c</fullName>
    <label>zvkgrpt</label>
    <length>50</length>
    <type>Text</type>
</CustomField>