force-app/main/default/objects/ZGRT14Report__c/fields/zwlzcsg__c.field-meta.xml
<CustomField>
    <fullName>zwlzcsg__c</fullName>
    <label>zwlzcsg</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>