force-app/main/default/objects/ZGRT14Report__c/fields/zxsjl__c.field-meta.xml
<CustomField>
    <fullName>zxsjl__c</fullName>
    <label>zxsjl</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>