force-app/main/default/objects/ZGRT14Report__c/fields/zxsjlzd__c.field-meta.xml
<CustomField>
    <fullName>zxsjlzd__c</fullName>
    <label>zxsjlzd</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>