force-app/main/default/objects/ZGRT14Report__c/fields/zxszj__c.field-meta.xml
<CustomField>
    <fullName>zxszj__c</fullName>
    <label>Total Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>